tests/valid/continue/v31_standalone_continue.f
program contlab
  integer i
  i = 0
  goto 99
98 continue
  i = i + 1
99 continue
  print *, i
end
