tests/invalid/variables/i01_uninit.f
program uninit
  integer x, y
  x = y + 1
  print *, x
end
